article changes (from US to UK) and technology spacing fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 85px;
+  scroll-padding-top: 130px;
 }
 
 body {
